[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "funbrew-pdf"
version = "1.3.0"
description = "FUNBREW PDF API client for Python"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://pdf.funbrew.cloud"
Documentation = "https://pdf.funbrew.cloud/docs"
Repository = "https://github.com/FUNBREW/pdf-python"
Issues = "https://github.com/FUNBREW/pdf-python/issues"
